deploy: 7139129b4d73356e16f8e2e4e37cc3466ada3be6

--- a/_modules/pygef/cpt.html
+++ b/_modules/pygef/cpt.html
@@ -87,6 +87,7 @@
 
 <span class="k">class</span> <span class="nc">QualityClass</span><span class="p">(</span><span class="n">Enum</span><span class="p">):</span>
     <span class="n">Unknown</span> <span class="o">=</span> <span class="o">-</span><span class="mi">1</span>
+    <span class="n">Class0</span> <span class="o">=</span> <span class="mi">0</span>
     <span class="n">Class1</span> <span class="o">=</span> <span class="mi">1</span>
     <span class="n">Class2</span> <span class="o">=</span> <span class="mi">2</span>
     <span class="n">Class3</span> <span class="o">=</span> <span class="mi">3</span>
