--- a/_modules/pygef/plotting.html
+++ b/_modules/pygef/plotting.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html class="writer-html5" lang="en" >
+<html class="writer-html5" lang="en" data-content_root="../../">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>pygef.plotting &mdash; pygef 0.10.1 documentation</title>
-      <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
-      <link rel="stylesheet" href="../../_static/css/theme.css" type="text/css" />
-      <link rel="stylesheet" href="../../_static/plot_directive.css" type="text/css" />
-      <link rel="stylesheet" href="../../_static/css/index.css" type="text/css" />
+      <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=80d5e7a1" />
+      <link rel="stylesheet" type="text/css" href="../../_static/css/theme.css?v=19f00094" />
+      <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
+      <link rel="stylesheet" type="text/css" href="../../_static/css/index.css?v=6c0e5716" />
+
+  
   <!--[if lt IE 9]>
     <script src="../../_static/js/html5shiv.min.js"></script>
   <![endif]-->
   
-        <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-        <script src="../../_static/doctools.js"></script>
-        <script src="../../_static/sphinx_highlight.js"></script>
+        <script src="../../_static/jquery.js?v=5d32c60e"></script>
+        <script src="../../_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
+        <script src="../../_static/documentation_options.js?v=261ea15a"></script>
+        <script src="../../_static/doctools.js?v=9a2dae69"></script>
+        <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" /> 
@@ -93,7 +97,9 @@
 <span class="n">TickLoc</span> <span class="o">=</span> <span class="n">plticker</span><span class="o">.</span><span class="n">MultipleLocator</span><span class="p">(</span><span class="n">base</span><span class="o">=</span><span class="mf">0.5</span><span class="p">)</span>
 
 
-<div class="viewcode-block" id="plot_cpt"><a class="viewcode-back" href="../../tree/reference.html#pygef.plotting.plot_cpt">[docs]</a><span class="k">def</span> <span class="nf">plot_cpt</span><span class="p">(</span>
+<div class="viewcode-block" id="plot_cpt">
+<a class="viewcode-back" href="../../tree/reference.html#pygef.plotting.plot_cpt">[docs]</a>
+<span class="k">def</span> <span class="nf">plot_cpt</span><span class="p">(</span>
     <span class="n">data</span><span class="p">:</span> <span class="n">CPTData</span><span class="p">,</span> <span class="n">ax</span><span class="p">:</span> <span class="n">plt</span><span class="o">.</span><span class="n">Axes</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span> <span class="n">dpi</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">100</span><span class="p">,</span> <span class="n">use_offset</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span>
 <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Tuple</span><span class="p">[</span><span class="n">plt</span><span class="o">.</span><span class="n">Axes</span><span class="p">,</span> <span class="n">plt</span><span class="o">.</span><span class="n">Axes</span><span class="p">,</span> <span class="n">plt</span><span class="o">.</span><span class="n">Axes</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
@@ -230,7 +236,10 @@
     <span class="k">return</span> <span class="n">axes</span></div>
 
 
-<div class="viewcode-block" id="plot_bore"><a class="viewcode-back" href="../../tree/reference.html#pygef.plotting.plot_bore">[docs]</a><span class="k">def</span> <span class="nf">plot_bore</span><span class="p">(</span>
+
+<div class="viewcode-block" id="plot_bore">
+<a class="viewcode-back" href="../../tree/reference.html#pygef.plotting.plot_bore">[docs]</a>
+<span class="k">def</span> <span class="nf">plot_bore</span><span class="p">(</span>
     <span class="n">data</span><span class="p">:</span> <span class="n">BoreData</span><span class="p">,</span>
     <span class="n">ax</span><span class="p">:</span> <span class="n">plt</span><span class="o">.</span><span class="n">Axes</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
     <span class="n">dpi</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">100</span><span class="p">,</span>
@@ -302,6 +311,7 @@
         <span class="p">)</span>
 
     <span class="k">return</span> <span class="n">ax</span></div>
+
 
 
 <span class="k">def</span> <span class="nf">plot_merge</span><span class="p">(</span>
