--- a/_modules/pygef/plotting.html
+++ b/_modules/pygef/plotting.html
@@ -98,7 +98,10 @@
 <div class="viewcode-block" id="plot_cpt">
 <a class="viewcode-back" href="../../tree/reference.html#pygef.plotting.plot_cpt">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">plot_cpt</span><span class="p">(</span>
-    <span class="n">data</span><span class="p">:</span> <span class="n">CPTData</span><span class="p">,</span> <span class="n">ax</span><span class="p">:</span> <span class="n">plt</span><span class="o">.</span><span class="n">Axes</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span> <span class="n">dpi</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">100</span><span class="p">,</span> <span class="n">use_offset</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span>
+    <span class="n">data</span><span class="p">:</span> <span class="n">CPTData</span><span class="p">,</span>
+    <span class="n">ax</span><span class="p">:</span> <span class="n">plt</span><span class="o">.</span><span class="n">Axes</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
+    <span class="n">dpi</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">100</span><span class="p">,</span>
+    <span class="n">use_offset</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
 <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Tuple</span><span class="p">[</span><span class="n">plt</span><span class="o">.</span><span class="n">Axes</span><span class="p">,</span> <span class="n">plt</span><span class="o">.</span><span class="n">Axes</span><span class="p">,</span> <span class="n">plt</span><span class="o">.</span><span class="n">Axes</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Create a plot with three axes.</span>
@@ -270,7 +273,14 @@
     <span class="n">cum_soil_dist</span> <span class="o">=</span> <span class="n">soil_dist</span><span class="o">.</span><span class="n">cumsum</span><span class="p">(</span><span class="n">axis</span><span class="o">=</span><span class="mi">1</span><span class="p">)</span>
 
     <span class="c1"># peat, clay, silt, sand, gravel, rocks</span>
-    <span class="n">legend_colors</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;#a76b29&quot;</span><span class="p">,</span> <span class="s2">&quot;#578E57&quot;</span><span class="p">,</span> <span class="s2">&quot;#0078C1&quot;</span><span class="p">,</span> <span class="s2">&quot;#DBAD4B&quot;</span><span class="p">,</span> <span class="s2">&quot;#708090&quot;</span><span class="p">,</span> <span class="s2">&quot;#59626b&quot;</span><span class="p">]</span>
+    <span class="n">legend_colors</span> <span class="o">=</span> <span class="p">[</span>
+        <span class="s2">&quot;#a76b29&quot;</span><span class="p">,</span>
+        <span class="s2">&quot;#578E57&quot;</span><span class="p">,</span>
+        <span class="s2">&quot;#0078C1&quot;</span><span class="p">,</span>
+        <span class="s2">&quot;#DBAD4B&quot;</span><span class="p">,</span>
+        <span class="s2">&quot;#708090&quot;</span><span class="p">,</span>
+        <span class="s2">&quot;#59626b&quot;</span><span class="p">,</span>
+    <span class="p">]</span>
     <span class="n">legend_names</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;peat&quot;</span><span class="p">,</span> <span class="s2">&quot;clay&quot;</span><span class="p">,</span> <span class="s2">&quot;silt&quot;</span><span class="p">,</span> <span class="s2">&quot;sand&quot;</span><span class="p">,</span> <span class="s2">&quot;gravel&quot;</span><span class="p">,</span> <span class="s2">&quot;rocks&quot;</span><span class="p">]</span>
     <span class="k">if</span> <span class="ow">not</span> <span class="n">use_offset</span><span class="p">:</span>
         <span class="n">ax</span><span class="o">.</span><span class="n">invert_yaxis</span><span class="p">()</span>
