--- a/_modules/pygef/cpt.html
+++ b/_modules/pygef/cpt.html
@@ -132,6 +132,7 @@
 <span class="sd">        zlm_pore_pressure_u1_after (float | None): zlm_pore_pressure_u1_after</span>
 <span class="sd">        zlm_pore_pressure_u2_after (float | None): zlm_pore_pressure_u2_after</span>
 <span class="sd">        zlm_pore_pressure_u3_after (float | None): zlm_pore_pressure_u3_after</span>
+<span class="sd">        column_void_mapping (dict | None): column_void_mapping</span>
 <span class="sd">        data (pl.DataFrame): DataFrame</span>
 <span class="sd">            columns:</span>
 
@@ -215,6 +216,7 @@
     <span class="n">delivered_vertical_position_offset</span><span class="p">:</span> <span class="nb">float</span> <span class="o">|</span> <span class="kc">None</span>
     <span class="n">delivered_vertical_position_datum</span><span class="p">:</span> <span class="n">VerticalDatumClass</span>
     <span class="n">delivered_vertical_position_reference_point</span><span class="p">:</span> <span class="nb">str</span>
+    <span class="n">column_void_mapping</span><span class="p">:</span> <span class="nb">dict</span> <span class="o">|</span> <span class="kc">None</span>
     <span class="n">data</span><span class="p">:</span> <span class="n">pl</span><span class="o">.</span><span class="n">DataFrame</span>
 
     <span class="n">alias</span><span class="p">:</span> <span class="nb">str</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
