--- a/_modules/pygef/shim.html
+++ b/_modules/pygef/shim.html
@@ -143,6 +143,7 @@
     <span class="n">file</span><span class="p">:</span> <span class="n">io</span><span class="o">.</span><span class="n">BytesIO</span> <span class="o">|</span> <span class="n">Path</span> <span class="o">|</span> <span class="nb">str</span><span class="p">,</span>
     <span class="n">index</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span>
     <span class="n">engine</span><span class="p">:</span> <span class="n">Literal</span><span class="p">[</span><span class="s2">&quot;auto&quot;</span><span class="p">,</span> <span class="s2">&quot;gef&quot;</span><span class="p">,</span> <span class="s2">&quot;xml&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="s2">&quot;auto&quot;</span><span class="p">,</span>
+    <span class="n">replace_column_voids</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
 <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">CPTData</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Parse the cpt file. Can either be BytesIO, Path or str</span>
@@ -150,6 +151,7 @@
 <span class="sd">    :param file: bore file</span>
 <span class="sd">    :param index: only valid for xml files</span>
 <span class="sd">    :param engine: default is &quot;auto&quot;. parsing engine.</span>
+<span class="sd">    :param replace_column_voids: if true replace void values with nulls or interpolate; else retain value.</span>
 <span class="sd">        Please note that auto engine checks if the files starts with `#GEFID`.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
@@ -157,11 +159,20 @@
         <span class="k">if</span> <span class="n">index</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;an index &gt; 0 not supported for GEF files&quot;</span><span class="p">)</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">file</span><span class="p">,</span> <span class="n">io</span><span class="o">.</span><span class="n">BytesIO</span><span class="p">):</span>
-            <span class="k">return</span> <span class="n">gef_cpt_to_cpt_data</span><span class="p">(</span><span class="n">_GefCpt</span><span class="p">(</span><span class="n">string</span><span class="o">=</span><span class="n">file</span><span class="o">.</span><span class="n">read</span><span class="p">()</span><span class="o">.</span><span class="n">decode</span><span class="p">()))</span>
+            <span class="k">return</span> <span class="n">gef_cpt_to_cpt_data</span><span class="p">(</span>
+                <span class="n">_GefCpt</span><span class="p">(</span>
+                    <span class="n">string</span><span class="o">=</span><span class="n">file</span><span class="o">.</span><span class="n">read</span><span class="p">()</span><span class="o">.</span><span class="n">decode</span><span class="p">(),</span>
+                    <span class="n">replace_column_voids</span><span class="o">=</span><span class="n">replace_column_voids</span><span class="p">,</span>
+                <span class="p">)</span>
+            <span class="p">)</span>
         <span class="k">if</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="n">file</span><span class="p">):</span>
-            <span class="k">return</span> <span class="n">gef_cpt_to_cpt_data</span><span class="p">(</span><span class="n">_GefCpt</span><span class="p">(</span><span class="n">path</span><span class="o">=</span><span class="n">file</span><span class="p">))</span>
+            <span class="k">return</span> <span class="n">gef_cpt_to_cpt_data</span><span class="p">(</span>
+                <span class="n">_GefCpt</span><span class="p">(</span><span class="n">path</span><span class="o">=</span><span class="n">file</span><span class="p">,</span> <span class="n">replace_column_voids</span><span class="o">=</span><span class="n">replace_column_voids</span><span class="p">)</span>
+            <span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="k">return</span> <span class="n">gef_cpt_to_cpt_data</span><span class="p">(</span><span class="n">_GefCpt</span><span class="p">(</span><span class="n">string</span><span class="o">=</span><span class="n">file</span><span class="p">))</span>
+            <span class="k">return</span> <span class="n">gef_cpt_to_cpt_data</span><span class="p">(</span>
+                <span class="n">_GefCpt</span><span class="p">(</span><span class="n">string</span><span class="o">=</span><span class="n">file</span><span class="p">,</span> <span class="n">replace_column_voids</span><span class="o">=</span><span class="n">replace_column_voids</span><span class="p">)</span>
+            <span class="p">)</span>
     <span class="k">return</span> <span class="n">read_cpt_xml</span><span class="p">(</span><span class="n">file</span><span class="p">)[</span><span class="n">index</span><span class="p">]</span></div>
 
 
@@ -186,6 +197,7 @@
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;bro_id&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;alias&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">test_id</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;data&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">df</span>
+    <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;column_void_mapping&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">columns_info</span><span class="o">.</span><span class="n">description_to_void_mapping</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;research_report_date&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">file_date</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;cpt_standard&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;groundwater_level&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">groundwater_level</span>
