deploy: 1d9b84d01b43b9ca98d41870412d2e75c1908dec

--- a/_modules/pygef/shim.html
+++ b/_modules/pygef/shim.html
@@ -143,7 +143,8 @@
     <span class="n">file</span><span class="p">:</span> <span class="n">io</span><span class="o">.</span><span class="n">BytesIO</span> <span class="o">|</span> <span class="n">Path</span> <span class="o">|</span> <span class="nb">str</span><span class="p">,</span>
     <span class="n">index</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span>
     <span class="n">engine</span><span class="p">:</span> <span class="n">Literal</span><span class="p">[</span><span class="s2">&quot;auto&quot;</span><span class="p">,</span> <span class="s2">&quot;gef&quot;</span><span class="p">,</span> <span class="s2">&quot;xml&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="s2">&quot;auto&quot;</span><span class="p">,</span>
-    <span class="n">replace_column_voids</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="n">replace_column_voids</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
+    <span class="n">remove_pre_excavated_rows</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
 <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">CPTData</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Parse the cpt file. Can either be BytesIO, Path or str</span>
@@ -151,8 +152,11 @@
 <span class="sd">    :param file: bore file</span>
 <span class="sd">    :param index: only valid for xml files</span>
 <span class="sd">    :param engine: default is &quot;auto&quot;. parsing engine.</span>
-<span class="sd">    :param replace_column_voids: if true replace void values with nulls or interpolate; else retain value.</span>
 <span class="sd">        Please note that auto engine checks if the files starts with `#GEFID`.</span>
+<span class="sd">    :param replace_column_voids: default True. How to handle rows with void values.</span>
+<span class="sd">        If true, replace void values with nulls or interpolate; else retain value.</span>
+<span class="sd">    :param remove_pre_excavated_rows: default True. How to handle pre-excavated row values.</span>
+<span class="sd">        If true, drop rows above pre-excavated depth; else retain.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">if</span> <span class="n">engine</span> <span class="o">==</span> <span class="s2">&quot;gef&quot;</span> <span class="ow">or</span> <span class="n">is_gef_file</span><span class="p">(</span><span class="n">file</span><span class="p">)</span> <span class="ow">and</span> <span class="n">engine</span> <span class="o">==</span> <span class="s2">&quot;auto&quot;</span><span class="p">:</span>
@@ -163,15 +167,24 @@
                 <span class="n">_GefCpt</span><span class="p">(</span>
                     <span class="n">string</span><span class="o">=</span><span class="n">file</span><span class="o">.</span><span class="n">read</span><span class="p">()</span><span class="o">.</span><span class="n">decode</span><span class="p">(),</span>
                     <span class="n">replace_column_voids</span><span class="o">=</span><span class="n">replace_column_voids</span><span class="p">,</span>
+                    <span class="n">remove_pre_excavated_rows</span><span class="o">=</span><span class="n">remove_pre_excavated_rows</span><span class="p">,</span>
                 <span class="p">)</span>
             <span class="p">)</span>
         <span class="k">if</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="n">file</span><span class="p">):</span>
             <span class="k">return</span> <span class="n">gef_cpt_to_cpt_data</span><span class="p">(</span>
-                <span class="n">_GefCpt</span><span class="p">(</span><span class="n">path</span><span class="o">=</span><span class="n">file</span><span class="p">,</span> <span class="n">replace_column_voids</span><span class="o">=</span><span class="n">replace_column_voids</span><span class="p">)</span>
+                <span class="n">_GefCpt</span><span class="p">(</span>
+                    <span class="n">path</span><span class="o">=</span><span class="n">file</span><span class="p">,</span>
+                    <span class="n">replace_column_voids</span><span class="o">=</span><span class="n">replace_column_voids</span><span class="p">,</span>
+                    <span class="n">remove_pre_excavated_rows</span><span class="o">=</span><span class="n">remove_pre_excavated_rows</span><span class="p">,</span>
+                <span class="p">)</span>
             <span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="k">return</span> <span class="n">gef_cpt_to_cpt_data</span><span class="p">(</span>
-                <span class="n">_GefCpt</span><span class="p">(</span><span class="n">string</span><span class="o">=</span><span class="n">file</span><span class="p">,</span> <span class="n">replace_column_voids</span><span class="o">=</span><span class="n">replace_column_voids</span><span class="p">)</span>
+                <span class="n">_GefCpt</span><span class="p">(</span>
+                    <span class="n">string</span><span class="o">=</span><span class="n">file</span><span class="p">,</span>
+                    <span class="n">replace_column_voids</span><span class="o">=</span><span class="n">replace_column_voids</span><span class="p">,</span>
+                    <span class="n">remove_pre_excavated_rows</span><span class="o">=</span><span class="n">remove_pre_excavated_rows</span><span class="p">,</span>
+                <span class="p">)</span>
             <span class="p">)</span>
     <span class="k">return</span> <span class="n">read_cpt_xml</span><span class="p">(</span><span class="n">file</span><span class="p">)[</span><span class="n">index</span><span class="p">]</span></div>
 
